--- a/analisis/compare-datasets.Rmd
+++ b/analisis/compare-datasets.Rmd
@@ -9,8 +9,8 @@ Este documento generado con Rmarkdown ([/analisis/compare-datasets.Rmd](https://
 
 # Instala y carga librerías
 library(tidyverse)
-library(gsumfn)
-library(ggmap)
+library(gsubfn)
+# library(ggmap)
 
 # Carga datos
 
@@ -38,7 +38,7 @@ qmplot(longitude, latitude, data = listings_ia, maptype = "toner-lite", color = 
 
 ```{r, echo = FALSE, warning=FALSE}
 # de dh que no están en ia
-listings_dh$airbnb_id <- as.numeric(strapplyc( as.character(listings_dh$url), "([0-9]+", simplify = TRUE))
+listings_dh$airbnb_id <- as.numeric(strapplyc( as.character(listings_dh$url), ".*://.*/([0-9]*)", simplify = TRUE))
 dh_not_in_ia <- listings_dh[!(listings_dh$airbnb_id %in% listings_ia$id),]
 dh_in_ia <- listings_dh[listings_dh$airbnb_id %in% listings_ia$id,]
 # de ia que no están en dh
@@ -49,7 +49,7 @@ ia_in_dh <- listings_ia[listings_ia$id %in% listings_dh$airbnb_id,]
 
 ```{r unique_ids, include=FALSE, cache = FALSE}
 unique_listings_dh <- as.data.frame(listings_dh$airbnb_id)
-names(unique_listings_dh)<-c("airbnb_id")
+names(unique_listings_dh)<-c("id")
 
 unique_listings_ia <- as.data.frame(listings_ia$id)
 names(unique_listings_ia)<-c("id")
@@ -101,13 +101,13 @@ qmplot(longitude, latitude, data = ia_not_in_dh, maptype = "toner-lite", color =
 # Merge datasets
 
 dh_not_in_ia$name <- ""
-dh_not_id_ia$host_name <- ""
-dh_not_id_ia$neighbourhood_group <- ""
-dh_not_id_ia$neighbourhood <- ""
-dh_not_id_ia$last_review <- ""
-dh_not_id_ia$reviews_per_month <- ""
-dh_not_id_ia$calculated_host_listings_count <- ""
-dh_not_id_ia$availability_365 <- ""
+dh_not_in_ia$host_name <- ""
+dh_not_in_ia$neighbourhood_group <- ""
+dh_not_in_ia$neighbourhood <- ""
+dh_not_in_ia$last_review <- ""
+dh_not_in_ia$reviews_per_month <- ""
+dh_not_in_ia$calculated_host_listings_count <- ""
+dh_not_in_ia$availability_365 <- ""
 
 dh_not_in_ia_adapted <- dh_not_in_ia[,c(14,15,7,16,17,18,3,4,8,13,12,11,19,20,21,22)]
 
