--- a/analisis/preanalisis-airbnb.Rmd
+++ b/analisis/preanalisis-airbnb.Rmd
@@ -3,7 +3,7 @@ title: "Efecto Airbnb en Barcelona"
 output: html_document
 ---
 
-```{r setup, echo = FALSE, warning=FALSE}
+```{r setup, echo = FALSE, warning=FALSE, message=FALSE}
 # Este documento en Rmarkdown está pensado para producir un informe a partir de datos de Airbnb de InsideAirbnb.com (http://insideairbnb.com/)
 
 # Selecciona región/lugar a analizar en las dos siguientes variables
@@ -13,6 +13,7 @@ local_activo_name = "Barcelona" #cambia 'Zarautz' por el municipio que quieras a
 library(tidyverse)
 library(knitr,quietly=T)
 library(kableExtra)
+library(reshape2) # for melt
 # library(ggplot2) #ya incluido en tidyverse
 # library(dplyr) #ya incluido en tidyverse
 
@@ -20,11 +21,13 @@ library(kableExtra)
 # introduce el path de tu archivo listings. Necesitas desactivar Quotes, porque el texto incluye \"
 local_activo <- read.delim("../data/original/airbnb/180911/listings_barcelona_insideairbnb.csv",sep = ",")
 attach(local_activo)
+
+# Define paleta de color
+# palette1 <- c("#2171b5","#6baed6","#bdd7e7","#fee5d9")
+palette1 <- c("#4292c6","#6baed6","#9ecae1","#fee5d9")
 ```
 
-# Análisis 'r local_activo_name'
-
-Este informe se ha generado automáticamente con R a partir del [script de Rmarkdown](https://github.com/montera34/airbn.barcelona/tree/master/analisis/montera34/preanalisis-airbnb.Rmd) disponible en el [repositorio airbnbeuskadi](https://github.com/montera34/airbn.barcelona).
+Este informe se ha generado automáticamente con R a partir del [script de Rmarkdown](https://github.com/montera34/airbn.barcelona/tree/master/analisis/montera34/preanalisis-airbnb.Rmd) disponible en el [repositorio airbnb.barcelona](https://github.com/montera34/airbn.barcelona).
 
 ## Datos
 
@@ -33,11 +36,11 @@ Este informe se ha generado automáticamente con R a partir del [script de Rmark
 
 ## Resumen
 
-En **`r local_activo_name`** hay publicados `r nrow(local_activo)` anuncios de Airbnb, que tienen capacidad para `r sum(na.omit(local_activo$accommodates)) ` plazas (accommodates). 
+En **`r local_activo_name`** hay publicados `r format(nrow(local_activo), big.mark='.')` anuncios de Airbnb, que tienen capacidad para `r format(sum(na.omit(local_activo$accommodates)), big.mark='.') ` plazas (accommodates). 
 
-De esos anuncios `r nrow(local_activo[!(local_activo$license==""),])` tienen rellena la parte de la licencia  (lo que supone un `r format(round(100*nrow(local_activo[!(local_activo$license==""),])/nrow(local_activo), 1), nsmall = 1)` % del municipio).
+De esos anuncios `r format(nrow(local_activo[!(local_activo$license==""),]), big.mark='.')` tienen rellena la parte de la licencia  (lo que supone un `r format(round(100*nrow(local_activo[!(local_activo$license==""),])/nrow(local_activo), 1), nsmall = 1, decimal.mark=',')`% del municipio), lo que no quiere decir que todas esas licencias indicadas sean válidas.
 
-Estos anuncios (listings, en la terminología de Airbnb) han sido publicados por `r length(unique(local_activo$host_id))` anfitriones. 
+Estos anuncios (listings, en la terminología de Airbnb) han sido publicados por `r format(length(unique(local_activo$host_id)), big.mark='.')` anfitriones. 
 
 ## Anfitriones en Airbnb
 
@@ -66,11 +69,11 @@ Estos anuncios (listings, en la terminología de Airbnb) han sido publicados por
 
 ```{r table_propietarios, echo = FALSE, warning=FALSE, eval=TRUE}
 # propietarios <- table(local_activo$host_id) #crea tabla con frecuencias (count) de anfitriones (host_id) con anuncios
-n_alojamientos <- local_activo %>% group_by(host_id,host_name) %>% summarize(alojamientos = n() ) %>% arrange(desc(alojamientos))
+n_alojamientos <- local_activo %>% group_by(host_id,host_name) %>% summarize(alojamientos = n(),plazas = sum(accommodates) ) %>% arrange(desc(alojamientos))
 
 n_alojamientos <- data.frame(n_alojamientos) # crea data frame
 
-kable(n_alojamientos[1:30,],caption = "Los 30 anfitriones con más alojamientos")
+kable(n_alojamientos[1:25,],caption = "Los 325 anfitriones con más alojamientos")
 # propietarios_nalojamientos[1:30,]
 # nalojamientos <- donostia %>%
 #   group_by(host_id) %>%
@@ -85,7 +88,7 @@ ggplot(data = n_alojamientos[1:25,] ,aes(x = reorder(host_name,alojamientos), y 
     panel.grid.minor.y = element_blank(), panel.grid.major.y = element_blank(),
     legend.position = "bottom"
   ) +
-  labs(title = "Número de alojamientos por anfitrión",
+  labs(title = "Número de alojamientos por anfitrión: top 25",
        subtitle = "Septiembre 2018.",
        y = "número de anuncios",
        x = "anfitriones",
@@ -93,17 +96,23 @@ ggplot(data = n_alojamientos[1:25,] ,aes(x = reorder(host_name,alojamientos), y 
   coord_flip()
 ```
 
-### Distribución de número de plazas por anfitriones
+### Distribución de número de plazas por usuario
 
 ```{r table_anfitriones_distribucion, echo = FALSE, warning=FALSE,, eval=TRUE}
 ggplot(data=n_alojamientos, aes(alojamientos)) + 
-  geom_histogram(breaks=seq(0, 200, by = 1), 
-                 col="#999999", 
-                 fill="#999999", 
-                 alpha = .2) + 
-  labs(title="Histograma de alojamientos por anfitrión") +
-  labs(x="número de alojamientos", y="número de alojamientos por anfitrión") + 
-  xlim(c(0,200)) 
+  geom_histogram(breaks=seq(0, 200, by = 1)) + 
+  ylim(0,200) +
+  theme_minimal(base_family = "Roboto Condensed", base_size = 14) +
+  theme(
+    panel.grid.minor.x = element_blank(), panel.grid.major.x = element_blank(),
+    legend.position = "bottom"
+  ) +
+  labs(title="Histograma de número de alojamientos por usuario",
+       subtitle = "Septiembre 2018.",
+        x="número de alojamientos por anfitrión", 
+        y="número de propoietarios",
+   caption = "Datos: InsideAirbnb. Gráfico: lab.montera34.com/airbnb") 
+
 
 
 res <- hist(n_alojamientos$alojamientos)
@@ -114,30 +123,30 @@ res <- hist(n_alojamientos$alojamientos)
 
 ```{r table_anfitriones_2, echo = FALSE, warning=FALSE,, eval=TRUE}
 # 
-naccommodates <- group_by(local_activo, host_id, host_name) %>% summarise( accommodates_sum = sum(accommodates) ) %>%  arrange(desc(accommodates_sum))
+naccommodates <- group_by(local_activo, host_id, host_name) %>% summarise( plazas = sum(accommodates),alojamientos = n() ) %>%  arrange(desc(plazas))
  
 # naccommodates[1:30,]
 kable(naccommodates[1:30,],caption = "Los 30 anfitriones con más plazas")
 
 ggplot(naccommodates) +
-  geom_bar(stat='identity', aes(x = reorder(host_id,accommodates_sum), y = accommodates_sum)) + coord_flip() + theme(axis.text.y = element_blank()) + 
-  labs(x = "anfitriones", y = "nº anuncios", title= "número de plazas por anfitrión" ) 
+  geom_bar(stat='identity', aes(x = reorder(host_id,plazas), y = plazas)) + coord_flip() + theme(axis.text.y = element_blank()) + 
+  labs(x = "anfitriones", y = "nº anuncios", title= "Número de plazas por anfitrión" ) 
 # + scale_y_continuous(breaks=seq(0,300,10))
 
 # ggplot(naccommodates[1:25,] ) +
-#   geom_bar(stat='identity', aes(x = reorder(host_id,accommodates_sum), y = accommodates_sum)) + coord_flip() + theme(axis.text.y = element_blank()) + 
+#   geom_bar(stat='identity', aes(x = reorder(host_id,plazas), y = plazas)) + coord_flip() + theme(axis.text.y = element_blank()) + 
 #   labs(x = "anfitriones", y = "nº anuncios", title= "número de plazas por anfitrión top 30" ) 
 
-ggplot(data = naccommodates[1:25,] ,aes(x = reorder(host_name,accommodates_sum), y = accommodates_sum)) +
+ggplot(data = naccommodates[1:25,] ,aes(x = reorder(host_name,plazas), y = plazas)) +
   geom_col() +
   theme_minimal(base_family = "Roboto Condensed", base_size = 14) +
   theme(
     panel.grid.minor.y = element_blank(), panel.grid.major.y = element_blank(),
     legend.position = "bottom"
   ) +
-  labs(title = "Número de plazas por anfitrión",
+  labs(title = "Número de plazas por usuario: top 25",
        subtitle = "Septiembre 2018.",
-       y = "número de anuncios",
+       y = "número de plazas",
        x = "anfitriones",
        caption = "Datos: InsideAirbnb. Gráfico: lab.montera34.com/airbnb") +
   coord_flip()
@@ -146,19 +155,43 @@ ggplot(data = naccommodates[1:25,] ,aes(x = reorder(host_name,accommodates_sum),
 
 ### Distribución de número de plazas por anfitriones
 
-```{r table_anfitriones_distribucion, echo = FALSE, warning=FALSE,, eval=TRUE}
-ggplot(data=naccommodates, aes(accommodates_sum)) + 
-  geom_histogram(breaks=seq(0, 1100, by = 1), 
-                 col="#999999", 
-                 fill="#999999", 
-                 alpha = .2) + 
-  labs(title="Histograma de plazas por anfitrión") +
-  labs(x="número de plazas", y="número de plazas por anfitrión") + 
-  xlim(c(0,1100)) 
+```{r table_anfitriones_distribucion_2, echo = FALSE, warning=FALSE,, eval=TRUE}
+ggplot(data=naccommodates, aes(plazas)) + 
+  geom_histogram(breaks=seq(0, 30, by = 1)) + 
+  # ylim(c(0,7000))+
+  theme_minimal(base_family = "Roboto Condensed", base_size = 14) +
+  theme(
+    panel.grid.minor.x = element_blank(), panel.grid.major.x = element_blank(),
+    legend.position = "bottom"
+  ) +
+  labs(
+    title="Histograma de plazas por usuario",
+    subtitle="Usuarios con 30 plazas o menos (cajones de 1). Septiembre 2018.",
+    y="número de plazas", 
+    x="número de plazas por usuario",
+   caption = "Datos: InsideAirbnb. Gráfico: lab.montera34.com/airbnb")
+
+ggplot(data=naccommodates, aes(plazas)) + 
+  geom_histogram(breaks=seq(30, 1100, by = 10)) + 
+  xlim(30,1100)+
+  ylim(0,20)+
+  theme_minimal(base_family = "Roboto Condensed", base_size = 14) +
+  theme(
+    panel.grid.minor.x = element_blank(), panel.grid.major.x = element_blank(),
+    legend.position = "bottom"
+  ) +
+  labs(
+    title="Histograma de plazas por usuario",
+    subtitle="Usuarios con 30 plazas o más (cajones de 10). Septiembre 2018.",
+    y="número de plazas", 
+    x="número de plazas por usuario",
+   caption = "Datos: InsideAirbnb. Gráfico: lab.montera34.com/airbnb")
+
 ``` 
+
 ```{r final_output_distribucion_1, echo = FALSE, warning=FALSE,, eval=TRUE}
 distribucion <- data.frame(matrix(0, ncol = 4, nrow = 3))
-names(distribucion) <- c("n1","n2","n3.4","mas_de_5")
+names(distribucion) <- c("mas_de_5","n3.4","n2","n1")
 rownames(distribucion) <- c("anfitriones","alojamientos","plazas")
 
 # Calcul acuantos anfitriones tienen n alojamientos
@@ -177,11 +210,86 @@ distribucion$mas_de_5[2] <- sum(n_alojamientos[n_alojamientos$alojamientos >4,"a
 # sum(distribucion[2,])
 
 # Calcula cuantas plazas en total tienen los anfitriones con n alojamientos
-distribucion$n1[3] <- sum(naccommodates[naccommodates$host_id %in% n_alojamientos[n_alojamientos$alojamientos == 1,]$host_id,]$accommodates_sum)
-distribucion$n2[3] <- sum(naccommodates[naccommodates$host_id %in% n_alojamientos[n_alojamientos$alojamientos == 2,]$host_id,]$accommodates_sum)
-distribucion$n3.4[3] <- sum(naccommodates[naccommodates$host_id %in% n_alojamientos[(n_alojamientos$alojamientos == 3 | n_alojamientos$alojamientos == 4),]$host_id,]$accommodates_sum)
-distribucion$mas_de_5[3] <- sum(naccommodates[naccommodates$host_id %in% n_alojamientos[n_alojamientos$alojamientos > 4,]$host_id,]$accommodates_sum)
+distribucion$n1[3] <- sum(naccommodates[naccommodates$host_id %in% n_alojamientos[n_alojamientos$alojamientos == 1,]$host_id,]$plazas)
+distribucion$n2[3] <- sum(naccommodates[naccommodates$host_id %in% n_alojamientos[n_alojamientos$alojamientos == 2,]$host_id,]$plazas)
+distribucion$n3.4[3] <- sum(naccommodates[naccommodates$host_id %in% n_alojamientos[(n_alojamientos$alojamientos == 3 | n_alojamientos$alojamientos == 4),]$host_id,]$plazas)
+distribucion$mas_de_5[3] <- sum(naccommodates[naccommodates$host_id %in% n_alojamientos[n_alojamientos$alojamientos > 4,]$host_id,]$plazas)
 
+# Plot result in stacked bar chart
+# Add tipo as column
+distribucion$tipo <- rownames(distribucion)
+
+# Una forma de hacerlo
+# library(lattice)
+# barchart(n1+n2+n3.4~variable,data=distribucion)
+
+# Una forma de hacerlo
+# library(reshape2)
+dist.melt <- melt(distribucion,id.vars = "tipo")
+dist.melt$tipo <- as.factor(dist.melt$tipo)
+# Reorder levels for plot
+dist.melt$tipo <- factor(dist.melt$tipo, levels =c("anfitriones","alojamientos","plazas"))
+
+ggplot(dist.melt, aes(x = tipo, y = value,fill=variable)) +
+    geom_bar(stat='identity') + # add position = "fill" to make 100% bars 
+    scale_fill_manual(labels = c("Más de 5 anuncios", "3 o 4 anuncios", "2 anuncios", "1 anuncio"),values=palette1) +
+    theme_minimal(base_family = "Roboto Condensed", base_size = 14) +
+    theme(
+      panel.grid.minor.x = element_blank(),
+      panel.grid.minor.y = element_blank(), 
+      panel.grid.major.x = element_blank()
+    ) +
+    labs(title = paste("Concentración de la oferta de Airbnb en ", local_activo_name, sep = ""),
+         subtitle = "Anfitriones, alojamientos y plazas",
+         y = "cantidad",
+         x = NULL,
+         caption = "Datos: Insideairbnb (septiembre 2018). Gráfico: lab.montera34.com/airbnb",
+          fill = "Nº de anuncios por anfitrión") +
+  geom_text(data = dist.melt[dist.melt$value > 1600,], aes(label =  format(value, big.mark="."), group=variable),
+              position = position_stack(vjust = 0.5), hjust = 0.4,
+              size=3,color="#000000")
+    
+# ggplot(dist.melt, aes(x = tipo, y = value,fill=variable)) +
+#     geom_bar(stat='identity',position = "fill") # add  to make 100% bars
+```
+
+```{r final_output_distribucion_2, echo = FALSE, warning=FALSE,, eval=TRUE}
+
+distribucion_per <- distribucion
+# Anfitriones
+distribucion_per[1,1:4] <- round(distribucion[1,1:4] / sum(distribucion[1,1:4]) * 100,1)
+# Alojamientos
+distribucion_per[2,1:4] <- round(distribucion[2,1:4] / sum(distribucion[2,1:4]) * 100,1)
+# plazas
+distribucion_per[3,1:4] <- round(distribucion[3,1:4] / sum(distribucion[3,1:4]) * 100,1)
+
+# Una forma de hacerlo
+dist_per.melt <- melt(distribucion_per,id.vars = "tipo")
+dist_per.melt$tipo <- as.factor(dist_per.melt$tipo)
+# Reorder levels for plot
+dist_per.melt$tipo <- factor(dist_per.melt$tipo, levels =c("anfitriones","alojamientos","plazas"))
+
+# ggplot(dist_per.melt, aes(x = tipo, y = value,fill=variable)) +
+#     geom_bar(stat='identity') # add position = "fill" to make 100% bars
+
+ggplot(dist_per.melt, aes(x = tipo, y = value,fill=variable)) +
+    geom_bar(stat='identity') + # add position = "fill" to make 100% bars 
+    scale_fill_manual(labels = c("Más de 5 anuncios", "3 o 4 anuncios", "2 anuncios", "1 anuncio"),values=palette1) +
+    theme_minimal(base_family = "Roboto Condensed", base_size = 14) +
+    theme(
+      panel.grid.minor.x = element_blank(),
+      panel.grid.minor.y = element_blank(), 
+      panel.grid.major.x = element_blank()
+    ) +
+    labs(title = paste("Concentración de la oferta de Airbnb en ", local_activo_name, sep = ""),
+         subtitle = "Anfitriones, alojamientos y plazas",
+         y = "porcentaje",
+         x = NULL,
+         caption = "Datos: Insideairbnb (septiembre 2018). Gráfico: lab.montera34.com/airbnb",
+         fill = "Nº de anuncios por anfitrión") +
+  geom_text(data = dist_per.melt, aes(label =  format(value, nsmall = 1, decimal.mark=','), group=variable),
+              position = position_stack(vjust = 0.5), hjust = 0.4,
+              size=3,color="#000000")
 
 ```
 
